feat: complete portfolio rebuild with React, Tailwind, Dark Mode, and EmailJS

--- a/index.html
+++ b/index.html
@@ -1,75 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=League+Spartan&family=Roboto:wght@300&display=swap');
-      </style>
-    <link rel="stylesheet" href="./assests/css/style.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-</head>
-<body>
-        <section class="para1">
-            <div class="logo">
-               
-                <img class="Dog" src="/assests/images/Picture.jpg">
-                <h1 class="logoT">Hi, I'm</h1>
-                <h1 class="logoT">Ralph Dulla</h1>
-                <p>Welcome to My Portfolio!</p>
-                <a href="#about"><button class="btn button1">About Me</button></a>
-                <a href="#content"><button href="#content" class="btn button2">Projects</button></a>
-            </div>
-        </section>
-        <div class="about" id="about">
-            <h2>Introduction</h2>
-            <h3>My name is Ralph Dulla. I am a Computer Science student and I am in my 2nd year
-                I love learning about HTML and CSS as it activates my creativity as I can create what I want. 
-                I also like Games such as racing. My favorite game is Forza Horizon 4.
-            </h3>
-        </div>
-    <div class="content" id="content">
-        <h2>Story of my life</h2>
-        <p>I was born at a very young age, when I was in my mother's womb I was introduced to technology
-            .It was very fascinnating to me and I would think time to time if what would happen if I get my hands
-            on  the technology, would it change my perspective to the world? I muttered. But then I was born
-            Technology was vast in this high-tech world, growing up made me realize that society revolves around
-            technology so I made a vow to choose Computer Science and take its great heights to its maximum 
-            potenital and change the world. 
-        </p>
-        <a href="https://github.com/Ralph-Dulla-23"><h4>Github</h4></a>
-    </div>
-</section>
-<section class="pokemon">
-    <div class="logo2">
-        <h4><a href="./pages/Pokemon-Website/pokemon.html">Pokémon Website</a></h4>
-    </div>
-</section>
-
-<section class="fashion">
-    <div class="logo3">
-        <h4><a href="./pages/Fashion-Blog/Blog.html">Fashion Blog</a></h4>
-    </div>
-</section>
-
-<section class="wine">
-    <div class="logo4">
-        <h4><a href="./pages/Wine-Festival/wine.html">Wine Festival</a></h4>
-    </div>
-</section>
-
-<section class="burger">
-    <div class="logo5">
-        <h4><a href="./pages/Davies-Burger/burger.html">Davies Burger</a></h4>
-    </div>
-</section>
-
-<section class="tracker">
-    <div class="logo6">
-        <h4><a href="./pages/Financial Tracker/home.html">Financial Tracker</a></h4>
-    </div>
-</section>
-
-</section>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>temp_project</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
